Adds /$recent-changes to Submodel Registry (#398)
* Adds recent changes endpoint to submodel registry

* Improves docs

* Trigger PR mergeability refresh
